--- a/The Complete 2022 Web Development Bootcamp/HTML - Personal Site/index.html
+++ b/The Complete 2022 Web Development Bootcamp/HTML - Personal Site/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jaideep's First site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
